// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderLegendDetailRow Should render categorical legend with breaks 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Icon"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="grey"
        isLinesOnly={false}
        isPointsOnly={true}
        label="US_format"
        styleName="icon"
        symbolId="circle"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="grey"
        isLinesOnly={false}
        isPointsOnly={true}
        label="CN_format"
        styleName="icon"
        symbolId="marker"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="2"
    >
      <Category
        color="grey"
        isLinesOnly={false}
        isPointsOnly={true}
        label={
          <EuiTextColor
            color="success"
          >
            Other
          </EuiTextColor>
        }
        styleName="icon"
        symbolId="square"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`renderLegendDetailRow Should render categorical legend with custom icons in breaks 1`] = `
<div>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        display="inlineBlock"
        position="top"
        title="Icon"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem
      key="0"
    >
      <Category
        color="grey"
        isLinesOnly={false}
        isPointsOnly={true}
        label="MX_format"
        styleName="icon"
        svg="<svg width=\\"24\\" height=\\"24\\" stroke-width=\\"1.5\\" viewBox=\\"0 0 24 24\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\">
<rect x=\\"9\\" y=\\"2\\" width=\\"6\\" height=\\"12\\" rx=\\"3\\" stroke=\\"currentColor\\" stroke-width=\\"1.5\\"/>
<path d=\\"M5 10V11C5 14.866 8.13401 18 12 18V18V18C15.866 18 19 14.866 19 11V10\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/>
<path d=\\"M12 18V22M12 22H9M12 22H15\\" stroke=\\"currentColor\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\"/>
</svg>
"
        symbolId="marker"
      />
    </EuiFlexItem>
    <EuiFlexItem
      key="1"
    >
      <Category
        color="grey"
        isLinesOnly={false}
        isPointsOnly={true}
        label={
          <EuiTextColor
            color="success"
          >
            Other
          </EuiTextColor>
        }
        styleName="icon"
        svg="<svg width=\\"200\\" height=\\"250\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path stroke=\\"#000\\" fill=\\"transparent\\" stroke-width=\\"5\\" d=\\"M10 10h30v30H10z\\"/></svg>"
        symbolId="kbn__custom_icon_sdf__foobar"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
